# git-dom

./: Cargo.toml  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
docs/: upstream-tracking-and-guided-updates.md
src/: cli.rs  config.rs  main.rs  submodule.rs
src/commands/: clone.rs  completions.rs  diff.rs  foreach.rs  ls.rs  man.rs  mod.rs  pull.rs  rm.rs  status.rs
