[package]
name = "git-dom"
version = "0.1.0"
edition = "2024"
description = "A friendlier UX for git submodules"
license = "MIT"
repository = "https://github.com/scottatron/git-dom"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
git2 = { version = "0.20", features = ["vendored-openssl"] }
colored = "3"
anyhow = "1"
