[package]
name = "git-dom"
version = "0.1.0"
edition = "2024"
description = "A friendlier UX for git submodules"
license = "MIT"
repository = "https://github.com/scottatron/git-dom"

[dependencies]
clap = { version = "4", features = ["derive", "unstable-ext"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
git2 = { version = "0.20", features = ["vendored-openssl"] }
colored = "3"
anyhow = "1"
atty = "0.2"

[package.metadata.release]
sign-tag = false
push = true
publish = false
tag-prefix = "v"
tag-message = "Release {{version}}"
pre-release-commit-message = "Release {{version}}"
